--- a/README.rmd
+++ b/README.rmd
@@ -20,7 +20,7 @@ This package is designed to help members of the [Kluane Red Squirrel Project](ht
 
 ```{r install, eval=F}
 install.packages("devtools")
-devtools::install_github("mstrimas/foofactors", build_vignettes = TRUE)
+devtools::install_github("mstrimas/krsp", build_vignettes = TRUE)
 ```
 
 # Use
