--- a/inst/doc/sql-in-r.rmd
+++ b/inst/doc/sql-in-r.rmd
@@ -2,9 +2,7 @@
 title: "Querying MySQL Databases in R"
 author: "Matt Strimas-Mackey"
 date: "`r Sys.Date()`"
-output: 
-  html_document: default
-  pdf_document: default
+output: html_document
 vignette: >
   %\VignetteIndexEntry{Querying MySQL Databases in R}
   %\VignetteEngine{knitr::rmarkdown}
