--- a/inst/doc/mysql-aws.rmd
+++ b/inst/doc/mysql-aws.rmd
@@ -2,7 +2,9 @@
 title: "MySQL in the Cloud with AWS"
 author: "Matt Strimas-Mackey"
 date: "`r Sys.Date()`"
-output: html_document
+output:
+  html_document:
+    toc: true
 vignette: >
   %\VignetteIndexEntry{MySQL in the Cloud with AWS}
   %\VignetteEngine{knitr::rmarkdown}
@@ -107,7 +109,7 @@ After you've entered all the necessary information click *Close*, then click on 
 
 ## R
 
-MySQL databases can be access in R using a variety of approaches: the `RMySQL` package, the `src_mysql` function in `dplyr`, or `krsp_connect` function in the custom `krsp` package. In all cases, you need to create a `my.cnf` connection file to store the location of the database and your credentials. This avoids having to store sensitive information, such as your password, within your R code.
+MySQL databases can be accessed in R using a variety of approaches: the `RMySQL` package, the `src_mysql` function in `dplyr`, or `krsp_connect` function in the custom `krsp` package. In all cases, you need to create a `my.cnf` connection file to store the location of the database and your credentials. This avoids having to store sensitive information, such as your password, within your R code.
 
 On Mac OS and Linux the connection file is `~/.my.cnf` and on Windows it is located at `C:/my.cnf`. Open this file, or create it if it doesn't already exist, and enter the following text:
 
@@ -117,7 +119,7 @@ username=msm
 password=F60RUsyiG579PeKdCH
 host=krsp.abc123.us-west-2.rds.amazonaws.com
 port=3306
-database=datasets
+database=krsp
 ```
 
 Make sure you edit this to include your own username and password, and the correct host, which is the Public DNS of the AWS instance or the IP address of a remote computer. Mutliple connection profiles can be set up with different names, here I've used `krsp-aws` for the name of this profile.
