--- a/inst/doc/sql-in-r.rmd
+++ b/inst/doc/sql-in-r.rmd
@@ -1,10 +1,10 @@
 ---
 title: "Querying MySQL Databases in R"
-author: "Matt Strimas-Mackey"
-date: "`r Sys.Date()`"
 output:
   html_document:
     toc: true
+    toc_depth: 2
+    theme: united
 vignette: >
   %\VignetteIndexEntry{Querying MySQL Databases in R}
   %\VignetteEngine{knitr::rmarkdown}
@@ -12,7 +12,7 @@ vignette: >
 ---
 
 ```{r options, include=F}
-knitr::opts_chunk$set(warning = FALSE)
+knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 options(knitr.table.format = 'markdown')
 ```
 
