--- a/vignettes/to-fix/sql-in-r.rmd
+++ b/vignettes/to-fix/sql-in-r.rmd
@@ -181,15 +181,15 @@ tbl(db, "census")
 
 Applying this to the example task:
 
-```{r}
+```{r no-br-function}
 no_br_status_dplyr <- function(year, dbname = "krsp", ...) {
   db <- src_mysql("krsp", ...)
   
   litter <- tbl(db, "litter") %>% 
     select(squirrel_id, br, yr)
   squirrel <- tbl(db, "squirrel")
-  inner_join(litter, squirrel, by = c("squirrel_id" = "id")) %>% 
-    filter(is.null(br), yr == year) %>% 
+  inner_join(litter, squirrel, by = c("squirrel_id" = "id")) %>%
+    filter(is.null(br), yr == year) %>%
     arrange(gr, trap_date) %>% 
     select(gr,
            id,
@@ -198,7 +198,7 @@ no_br_status_dplyr <- function(year, dbname = "krsp", ...) {
            locx, locy,
            trap_date)
 }
-res <- no_br_status_dplyr(2015)
+res <- no_br_status_dplyr(2014)
 knitr::kable(head(res))
 ```
 
