--- a/vignettes/krsp-db.rmd
+++ b/vignettes/krsp-db.rmd
@@ -315,7 +315,7 @@ trapping %>%
 
 ## Case sensitivity
 
-R is case sensistive, MySQL is not. The can cause problems because MySQL allows you to use mixed case when defining variables. For example, a variable can be called `LocX`, but referred to with `locx`, `LocX`, or `LOCX`. `dplyr` isn't so sloppy, if a variable is called `LocX` in the database, it must be referred to as `LocX`.
+R is case sensistive, MySQL is not. The can cause problems because MySQL allows you to use mixed case when defining variables. For example, a variable can be called `LocX`, but referred to with `locx`, `LocX`, or `LOCX`. `dplyr` isn't so sloppy, if a variable is called `LocX` in the database, it must be referred to as `LocX`. This also applies to table names, for example, note the mixed case in `FLastAll`.
 
 To see this issue in action, note that the `dbaMidden` table uses `locX`, while the `census` table uses `locx`.
 
@@ -339,3 +339,18 @@ tbl(con, "census") %>%
 ```
 
 To avoid this, just make sure you refer to variables with the correct case. Even better, only use lowercase when defining variables in the database.
+
+## Record limit
+
+By default, `dplyr` only pulls a maximum of 100,000 from an SQL query. In most cases, this should be sufficient, howver, if you suspect your query may return more records than this, use `n = Inf` in `collect()`. For example, to pull the entire trapping table:
+
+```{r}
+# only the first 100,000 rows are returned
+tbl(con, "trapping") %>% 
+  collect() %>% 
+  nrow()
+# return all rows
+tbl(con, "trapping") %>% 
+  collect(n = Inf) %>% 
+  nrow()
+```
